2003-07-19  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tkWinCursor.c (TkGetCursorByName): Fix bug 420510 to provide
	consistency between unix and windows -cursor option.

	* library/scale.tcl: Fix for bug 706765 to correctly handle the 
	-sliderrelief option while moving the thumb.

2003-07-18  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/tkUnixFont.c (Tk_DrawChars): do not make XGetGeometry call
	that prevents overwidth lines as it requires a roundtrip call to
	the X server for every string drawn.  Hard-code max width to 32768
	until a beter solution to get max width is made.

	* library/panedwindow.tcl: use widget-specific Priv slots for
	pwAfterId and panecursor items to correctly handle cursor changes
	with adjacant panedwindows.

	* generic/tkEvent.c (Tk_HandleEvent): correct XCreateIC call for
	TK_XIM_SPOT usage. [Bug 742660] (takahashi)

	* win/tkWinDialog.c: doubled the TK_MULTI_MAX_PATH value to ~10K.
	This is a short-term solution until the -multiple option is
	extended.  [Bug 641261]

2003-07-18  Vince Darley <vincentdarley@users.sourceforge.net>

	* generic/tkWindow.c:
	* macosx/tkMacOSXDialog.c: added native tk_messageBox command,
	(Tk_MessageBoxObjCmd) for MacOS X platform.

	* macosx/tkMacOSXMenu.c: corrected encoding conversion for
	torn-off menu entries (but many other display problems still
	exist with these)

	* macosx/tkMacOSXMouseEvent.c: improved handling of events in the
	presence of grabs, particularly activation events.

2003-07-18  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* tests/panedwindow.test (panedwindow-30.2): 
	* generic/tkPanedWindow.c (Tk_PanedWindowObjCmd): Ensure that we
	can share GCs between a panedwindow and its sash proxy, even if
	the panedwindow is in a toplevel with a different visual. [Bug 702230]

2003-07-17  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Makefile: Changes for new tcl buildsystem.

	* macosx/Wish.pbproj/jingham.pbxuser:
	* macosx/Wish.pbproj/project.pbxproj: